--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
   "name": "qvote",
   "version": "0.0.0",
+  "author": "Nikola Rusakov",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prettier": "prettier --write \"**/*.{js,json,scss,md,ts,html}\""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.3.0",
     "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
+    "@angular/compiler": "~+7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.1",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/effects": "latest",
+    "@ngrx/entity": "^7.2.0",
+    "@ngrx/router-store": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
+    "@ngrx/store-devtools": "^7.2.0",
+    "angular-oauth2-oidc": "^5.0.2",
     "core-js": "^2.5.4",
+    "dayjs": "^1.8.0",
+    "dotenv": "^6.2.0",
+    "firebase": "^5.8.1",
+    "hammerjs": "^2.0.8",
+    "prettier": "^1.16.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -29,18 +46,9 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@ngrx/schematics": "^7.2.0",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
     "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
