feat(app): in app sign in design

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "~7.3.0",
     "@angular/common": "~7.2.0",
-    "@angular/compiler": "~+7.2.0",
+    "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/fire": "^5.1.1",
     "@angular/flex-layout": "^7.0.0-beta.23",
@@ -35,6 +35,8 @@
     "dotenv": "^6.2.0",
     "firebase": "^5.8.1",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
+    "mattermost-redux": "mattermost/mattermost-redux",
     "prettier": "^1.16.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -42,12 +44,13 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
     "@ngrx/schematics": "^7.2.0",
     "@types/node": "~8.9.4",
+    "babel-cli": "^6.26.0",
     "codelyzer": "~4.5.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
